# smokey

./: .clang-format  CMakeLists.txt  README.md  lsan-suppressions.txt
docs/: adj.odg
include/: sim.hpp
layouts/: abnd_ship.txt  corridor.txt  default.txt  room_128x128.txt  room_8x8.txt  room_9x9_obr.txt  smokey.txt  snake_9x9_obr.txt
src/: main.cpp
